// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a currency logo with network logo 1`] = `
<span
  className="t_light _dsp_contents "
>
  <span
    className=" t_light _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _dsp-flex _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ai-center _h-20px _jc-center _w-20px "
      style={{}}
    >
      <Image
        source={
          {
            "uri": "https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
          }
        }
        style={
          [
            {
              "resizeMode": "contain",
            },
            {
              "backgroundColor": "var(--surface3)",
              "borderColor": "var(--surface3)",
              "borderRadius": 10,
              "borderWidth": 0.5,
              "height": 20,
              "width": 20,
            },
          ]
        }
      />
      <div
        className="  _ai-stretch _dsp-flex _fd-column _fb-auto _bxs-border-box _mih-0px _miw-0px _fs-0 _b-0px _pos-absolute _r-0px _bxsh-d0t860636680 "
        style={{}}
      />
    </div>
  </span>
</span>
`;

exports[`renders a currency logo without network logo 1`] = `
<span
  className="t_light _dsp_contents "
>
  <span
    className=" t_light _dsp_contents is_Theme"
    style={
      {
        "color": "var(--color)",
      }
    }
  >
    <div
      className="  _dsp-flex _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _ai-center _h-20px _jc-center _w-20px "
      style={{}}
    >
      <Image
        source={
          {
            "uri": "https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
          }
        }
        style={
          [
            {
              "resizeMode": "contain",
            },
            {
              "backgroundColor": "var(--surface3)",
              "borderColor": "var(--surface3)",
              "borderRadius": 10,
              "borderWidth": 0.5,
              "height": 20,
              "width": 20,
            },
          ]
        }
      />
    </div>
  </span>
</span>
`;
